# cloth-simulation

./: .gitignore  CMakeLists.txt  README  cmake-generate.bat
src/: Cloth.cpp  Cloth.h  Particle.cpp  Spring.cpp  main.cpp
src/Math/: Vector2f.cpp  Vector2f.h  Vector3f.cpp  Vector3f.h
src/Std/: CMath.h  CStdInt.h
